# Client-Server-Application

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  parameters.txt
client/src/: HTTP_Client.cpp  ImageHandler.cpp  ImageHandler.h  Logger.cpp  Logger.h  Params.cpp  Params.h
server/: CMakeLists.txt
server/src/: Compression.cpp  Compression.h  HTTP_Server.cpp  ImageProcessor.cpp  ImageProcessor.h  MessageHandler.cpp  MessageHandler.h  Params.cpp  Params.h  Session.cpp  Session.h
src/: HTTP_Server.cpp
